Teamwork/AWS/cloudformationtest/cloudformationtest.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: |
This temp creats asn ASG behind ALB
  
Parameters:
myVPC:
  Description: 
  Type: AWS::EC2::VPC::Id

mySubnets:
  Description: Select at least 2 SubNet
  Type: List<AWS::EC2::Subnet::Id>

myKP:
  Description: Select your Key
  Type: AWS::EC2::KeyPair::KeyName

myIT:
  Description: Select Instance Type
  Type: String
  Default:
  "AllowedValues" : [ "t2.micro", "t2.nano", "t3.micro", "t3.nano"]

myTV:
  Description: Target Value of CPU Utilization
  Type: "AWS::ElasticLoadBalancingV2::TargetGroup"
  Default: 

Mappings:
  RegionImageMap:
    us-east-1:
      AMI: ami-0dc2d3e4c0f9ebd18
    us-east-2:
      AMI: ami-0233c2d874b811deb
    us-west-1:
      AMI: ami-0ed05376b59b90e46
    us-west-2:
      AMI: ami-0dc8f589abe99f538
    eu-west-1:
      AMI: ami-058b1b7fe545997ae

Resources:
myLB:
  Type: AWS::ElasticLoadBalancingV2::LoadBalancer
  Properties:
    SecurityGroups:
      !GetAtt mySG.GroupID
    Subnets: !mySubnets
    Tags:
      Tags
    Type: "String"

myListenner:
  Type: AWS::ElasticLoadBalancingV2::Listener
  Properties:
     DefaultActions: # Required
      - Type: forward
        TargetGroupARN
    LoadBalancerArn: !Ref myALB # Required
    Port: 80
    Protocol: HTTP

  myASG:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      AvailabilityZones: !GetAZs 
      DesiredCapacity: "2"
      HealthCheckGracePeriod: 90
      HealthCheckType: ELB
      LaunchTemplate:
        LaunchTemplateId: !Ref myLT
        Version: "1"
      MaxSize: "3" # Required
      MinSize: "1" # Required
      TargetGroupARNs:
        - !Ref myTG

  myCPUPolicy:
    Type: AWS::AutoScaling::ScalingPolicy
    Properties:
      AutoScalingGroupName: !Ref myASG  # Required
      PolicyType: TargetTrackingScaling
      TargetTrackingConfiguration:
        PredefinedMetricSpecification:
          PredefinedMetricType: ASGAverageCPUUtilization
        TargetValue: 60.0

myLT:
  Type: AWS::EC2::LaunchTemplate
  Properties:
      ImageId: !FindInMap
        - RegionImageMap
        - !Ref AWS::Region
        - AMI
      InstanceType: !Ref myIT
      KeyName: !Ref myKP
      SecurityGroupIds:
        - !GetAtt mySG.GroupId
      UserData: !Base64 |
          #! /bin/bash
          yum update -y
          yum install -y httpd
          TOKEN=`curl -X PUT "http://169.254.169.254/latest/api/token" -H "X-aws-ec2-metadata-token-ttl-seconds: 21600"` \
          && PRIVATE_IP=`curl -H "X-aws-ec2-metadata-token: $TOKEN" http://169.254.169.254/latest/meta-data/local-ipv4`
          TOKEN=`curl -X PUT "http://169.254.169.254/latest/api/token" -H "X-aws-ec2-metadata-token-ttl-seconds: 21600"` \
          && PUBLIC_IP=`curl -H "X-aws-ec2-metadata-token: $TOKEN" http://169.254.169.254/latest/meta-data/public-ipv4` 
          DATE_TIME=`date`
          chmod -R 777 /var/www/html
          echo "<html>
          <head>
              <title> Congratulations! You have created an instance from Launch Template</title>
          </head>
          <body>
              <h1>This web server is launched from launch template by HARUN </h1>
              <p>This instance is created at <b>$DATE_TIME</b></p>
              <p>Private IP address of this instance is <b>$PRIVATE_IP</b></p>
              <p>Public IP address of this instance is <b>$PUBLIC_IP</b></p>
          </body>
          </html>" > /var/www/html/index.html
          systemctl start httpd
          systemctl enable httpd

myTG:
  Type: AWS::ElasticLoadBalancingV2::TargetGroup
  Properties:
    HealthCheckIntervalSeconds: 10
    HealthCheckTimeoutSeconds: 5
    HealthyThresholdCount: 5
    Port: 80
    Protocol: HTTP
    UnhealthyThresholdCount: 3
    VpcId: !Ref myVPC

mySG:
  Type: AWS::EC2::SecurityGroup
  Properties:
    GroupDescription: Enables SSH and HTTP # Required
    SecurityGroupIngress:
      IpProtocol: tcp
      FromPort: 22
      ToPort: 22
      CidrIp: 0.0.0.0/0
      SecurityGroupIngress:
      IpProtocol: tcp
      FromPort: 80
      ToPort: 80
      CidrIp: 0.0.0.0/0
    VpcId: !Ref myVPC

Outputs:
AppUrl:
  Description: Information about the value
  Value:  !Join 
       - ''
       - - 'http://'
         - !GetAtt myALB.DNSName
